# kiwi-browser

./: SATELLITE_SPACE_INTEGRATION.md  settings.gradle.kts
.github/workflows/: ci.yml
chrome/android/java/src/org/chromium/chrome/browser/satellitespace/: BUILD.gn  SatelliteSpace.kt  SatelliteSpaceManager.kt  SatelliteSpacePreferences.kt  SatelliteSpaceTabHelper.kt  TabBuilderSatelliteSpacePatch.java  TabInterfacePatch.java  TabSatelliteSpacePatch.java
chrome/android/java/src/org/chromium/chrome/browser/satellitespace/ui/: CreateSatelliteSpaceDialog.kt  SatelliteSpaceManagerActivity.kt  SatelliteSpaceSelectorView.kt  SatelliteSpaceTabSwitcherDecorator.kt
chrome/android/res/layout/: satellite_space_selector.xml
chrome/android/res/menu/: satellite_space_menu.xml
chromium-stubs/: build.gradle.kts
chromium-stubs/src/main/java/org/chromium/base/: Log.java  ThreadUtils.java
chromium-stubs/src/main/java/org/chromium/base/annotations/: VisibleForTesting.java
chromium-stubs/src/main/java/org/chromium/chrome/browser/incognito/: IncognitoUtils.java
chromium-stubs/src/main/java/org/chromium/chrome/browser/profiles/: Profile.java  ProfileManager.java
chromium-stubs/src/main/java/org/chromium/chrome/browser/tab/: Tab.java  TabObserver.java
chromium-stubs/src/main/java/org/chromium/content_public/browser/: WebContents.java
chromium-stubs/src/main/java/org/chromium/ui/base/: WindowAndroid.java
satellitespace/: build.gradle.kts
satellitespace/src/main/: AndroidManifest.xml
(+2 files in other folders)
